# lectures

./: .gitignore  README.md  principles_patterns.md
ExampleCode/Cofoja-Example/: README.md
ExampleCode/better-code/: settings.gradle
ExampleCode/cofoja/: build.gradle  settings.gradle
ExampleCode/fsms/: settings.gradle
ExampleCode/spock-example/: settings.gradle
common/schedule/: 01_academic_events.md
computer_science/: LICENSE  iterative_course_design.md  planning.ods  swebok.md  templates.md  todo.md
computer_science/CS4442/: README.md
computer_science/CS4458 - Computer Graphics/src/assignments/solutions/code/hw01/: CMakeLists.txt  Section.h  Section01.cpp  Section01.h  Section02.cpp  Section02.h  Section03.cpp  Section03.h  Section04.cpp  Section04.h  main.cpp
computer_science/CS4458 - Computer Graphics/src/assignments/solutions/code/hw02/: Brick3D.cpp  Brick3D.h  CMakeLists.txt  Camera3D.cpp  Camera3D.h  Colors.h  Door3D.cpp  Door3D.h  DoorHandle3D.cpp  DoorHandle3D.h  DriveWay3D.cpp  DriveWay3D.h  Floor3DTile.cpp  Floor3DTile.h  Garage3D.cpp  Garage3D.h  GarageWindow3D.cpp  GarageWindow3D.h  House3D.cpp  House3D.h  HouseWing3D.cpp  HouseWing3D.h  Land3D.cpp  Land3D.h  Object3D.cpp  Object3D.h  Plot3D.cpp  Plot3D.h  Roof3D.cpp  Roof3D.h  SideWalk3D.cpp  SideWalk3D.h  SideWalkTile3D.cpp  SideWalkTile3D.h  Walkway3D.cpp  Walkway3D.h  Walkway3DTile.cpp  Walkway3DTile.h  Window3D.cpp  Window3D.h  (+4 more)
msse/: graphics1.md
software_engineering/: bba_courses.md  course_plans.md  curriculum_mapping.md  grad_courses.md  path.md  sde_curriculum.md  thoughts.md
(+4868 files in other folders)
