cmake_minimum_required(VERSION 3.12)
project(hw02)

set(CMAKE_CXX_STANDARD 14)

add_executable(hw02 main.cpp Object3D.cpp Object3D.h Brick3D.cpp Brick3D.h Camera3D.cpp Camera3D.h Door3D.cpp Door3D.h DoorHandle3D.cpp DoorHandle3D.h DriveWay3D.cpp DriveWay3D.h Floor3DTile.cpp Floor3DTile.h Garage3D.cpp Garage3D.h GarageWindow3D.cpp GarageWindow3D.h House3D.cpp House3D.h HouseWing3D.cpp HouseWing3D.h Land3D.cpp Land3D.h Plot3D.cpp Plot3D.h Roof3D.cpp Roof3D.h SideWalk3D.cpp SideWalk3D.h SideWalkTile3D.cpp SideWalkTile3D.h Walkway3D.cpp Walkway3D.h Walkway3DTile.cpp Walkway3DTile.h Window3D.cpp Window3D.h WingRoof3D.cpp WingRoof3D.h WingWindow3D.cpp WingWindow3D.h Colors.h)